# Poset_Explorer

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
docs/: workflow_families.md
docs/cureated transcripts/: ML transcript Validator plan.txt
docs/logs/: 2026-05-15-session.md  2026-05-16-session.md  2026-05-17-session.md  2026-05-18-session.md  2026-05-21-session.md  2026-05-25-session.md  2026-05-26-session.md  2026-05-27-session.md  2026-05-28-session.md  2026-05-29-session.md
docs/transcripts/: Gemini virtual matrix idea.md  ML transcript Global Complexity discussion.txt  codex python to rust label.txt
notebooks/: poset_showcase.ipynb
rust/src/: closure.rs  extensions.rs  ideals.rs  lib.rs  weighted.rs
rust/tests/: closure.rs  extensions.rs  ideals.rs  weighted.rs
src/: analysis.py  closure.py  constructors.py  enumeration.py  families.py  ideal.py  intervals.py  poset.py  weighted.py
tests/: test_analysis.py  test_closure.py  test_enumeration.py  test_example_usage.py  test_families.py  test_ideals.py  test_intervals.py  test_poset.py  test_weighted.py
