[package]
name = "poset-explorer-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "_poset_explorer_rust"
path = "rust/src/lib.rs"
crate-type = ["cdylib"]

[[test]]
name = "closure"
path = "rust/tests/closure.rs"

[[test]]
name = "ideals"
path = "rust/tests/ideals.rs"

[[test]]
name = "extensions"
path = "rust/tests/extensions.rs"

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
